# langsmith-data-migration-tool

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  MIGRATION_RESULTS.md  README.md  README_interactive.md  README_v2.md  demo_selector.py  inspect_client.py  migrate.py  migrate_csv_enhanced.py  migrate_csv_enhanced.py.bak  migration.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_interactive.py
.github/: dependabot.yml
.github/scripts/: check_readme_release_sync.sh  check_wheel_contents.py
.github/workflows/: release.yml  security.yml  test.yml
docs/superpowers/plans/: 2026-05-15-rewrite-run-times.md
examples/: users_members_example.csv  users_members_multi_workspace_roles_example.csv  users_members_pending_mixed_workspace_roles_example.csv  users_members_sync_remove_user_example.csv  users_members_sync_remove_workspace_b_example.csv
langsmith_migrator/: __init__.py  __main__.py
langsmith_migrator/cli/: __init__.py  interactive_selector.py  main.py  tui_project_mapper.py  tui_selector.py  tui_workspace_mapper.py
langsmith_migrator/core/: __init__.py  api_client.py  migrators.py
langsmith_migrator/core/migrators/: __init__.py  annotation_queue.py  base.py  chart.py  dataset.py  experiment.py  feedback.py  orchestrator.py  prompt.py  role.py  rules.py  user.py  user_role.py
langsmith_migrator/utils/: __init__.py  chart_mode.py  config.py  matching.py  migration_config.py  pagination.py  retry.py  state.py  time_shift.py  workspace.py  workspace_resolver.py
tests/: cli_migrate_all_rules_test.py  conftest.py  test_api_client.py  test_chart_migrator.py  test_chart_mode.py  test_config.py  test_dataset_migrator.py  test_experiment_migrator.py  test_experiment_resume.py  test_feedback_migrator.py  test_orchestrator_resume.py  test_package_version.py  test_pagination.py  test_prompt_migrator.py  test_retry.py  test_rules_migrator.py  test_state_resolution.py  test_state_transitions.py  test_tui_project_mapper.py  test_user_role_migrator.py  test_users_csv_export.py  test_users_csv_input.py  test_workspace_mapper.py  test_workspace_resolver.py
tests/functional/: conftest.py  test_cli_functional.py  test_experiment_time_shift.py  test_roles_users_cli.py
tests/unit/: test_time_shift.py
tests/unit/migrators/: test_role_migrator.py  test_user_migrator.py
