[project]
name = "langsmith-data-migration-tool"
version = "0.1.0"
description = "A tool for migrating datasets, experiments, and annotation queues between LangSmith instances"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=6.2.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=1.1.0",
]

[project.scripts]
langsmith-migrator = "langsmith_migrator.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=langsmith_migrator",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.hatch.build.targets.wheel]
packages = ["langsmith_migrator"]

[tool.pyright]
typeCheckingMode = "off"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
