[project]
name = "langsmith-data-migration-tool"
version = "0.0.4"
description = "A tool for migrating datasets, experiments, prompts, rules, and annotation queues between LangSmith instances"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "LangChain", email = "support@langchain.dev"}
]
keywords = ["langsmith", "migration", "datasets", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "textual>=6.2.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "urllib3>=2.6.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "langchain-core>=1.2.5",
    # Model packages required for pulling prompts with include_model=True
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/langchain-ai/langsmith-data-migration-tool"
Repository = "https://github.com/langchain-ai/langsmith-data-migration-tool"
"Bug Tracker" = "https://github.com/langchain-ai/langsmith-data-migration-tool/issues"
Documentation = "https://github.com/langchain-ai/langsmith-data-migration-tool#readme"

[project.scripts]
langsmith-migrator = "langsmith_migrator.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
]
# Additional model providers for pulling prompts with include_model=True
models = [
    "langchain-google-genai>=1.0.0",
    "langchain-mistralai>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-fireworks>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-cohere>=0.1.0",
]
# All model providers
all = [
    "langchain-google-genai>=1.0.0",
    "langchain-mistralai>=0.1.0",
    "langchain-aws>=0.1.0",
    "langchain-fireworks>=0.1.0",
    "langchain-groq>=0.1.0",
    "langchain-cohere>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=langsmith_migrator",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.hatch.build.targets.wheel]
packages = ["langsmith_migrator"]

[tool.pyright]
typeCheckingMode = "off"

[tool.bandit]
exclude_dirs = ["tests", ".venv", "dist", "build"]
targets = ["langsmith_migrator"]
skips = [
    "B101",  # Skip assert warnings (used in tests)
    "B112",  # Skip try-except-continue (used for fallback patterns)
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "S"]  # E=errors, F=pyflakes, W=warnings, S=security
ignore = [
    "S101",  # Allow assert statements
    "S112",  # Allow try-except-continue (used for fallback patterns)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]  # Disable security rules in tests

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
