[project]
name = "langsmith-data-migration-tool"
version = "0.0.76"
description = "A tool for migrating datasets, experiments, prompts, rules, and annotation queues between LangSmith instances"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
    {name = "LangChain", email = "support@langchain.dev"}
]
keywords = ["langsmith", "migration", "datasets", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    # Direct deps are pinned with `==` to prevent fresh installs from
    # picking up a compromised or yanked release before Dependabot reviews
    # it. Bumps must go through a Dependabot PR + CI to land.
    "textual==8.2.6",
    "click==8.4.0",
    "rich==15.0.0",
    "requests==2.34.2",
    "urllib3==2.7.0",
    "langsmith==0.8.5",
    "python-dotenv==1.2.2",
    "langchain-core==1.4.0",
    # Model packages required for pulling prompts with include_model=True
    "langchain-openai==1.2.1",
    "langchain-anthropic==1.4.3",
]

[project.urls]
Homepage = "https://github.com/langchain-ai/langsmith-data-migration-tool"
Repository = "https://github.com/langchain-ai/langsmith-data-migration-tool"
"Bug Tracker" = "https://github.com/langchain-ai/langsmith-data-migration-tool/issues"
Documentation = "https://github.com/langchain-ai/langsmith-data-migration-tool#readme"

[project.scripts]
langsmith-migrator = "langsmith_migrator.__main__:main"

[project.optional-dependencies]
test = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "respx==0.23.1",
    "ruff==0.15.13",
]
# Additional model providers for pulling prompts with include_model=True
models = [
    "langchain-google-genai==4.2.2",
    "langchain-mistralai==1.1.4",
    "langchain-aws==1.4.7",
    "langchain-fireworks==1.3.1",
    "langchain-groq==1.1.2",
    "langchain-cohere==0.5.1",
]
# All model providers
all = [
    "langchain-google-genai==4.2.2",
    "langchain-mistralai==1.1.4",
    "langchain-aws==1.4.7",
    "langchain-fireworks==1.3.1",
    "langchain-groq==1.1.2",
    "langchain-cohere==0.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=langsmith_migrator",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.hatch.build.targets.wheel]
packages = ["langsmith_migrator"]

[tool.pyright]
typeCheckingMode = "off"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "S"]  # E=errors, F=pyflakes, W=warnings, S=security
ignore = [
    "S101",  # Allow assert statements
    "S112",  # Allow try-except-continue (used for fallback patterns)
    "E501",  # Line too long - pre-existing, TODO: fix incrementally
    "E701",  # Multiple statements on one line - pre-existing
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S"]  # Disable security rules in tests

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "respx==0.23.1",
]
